--- a/inventarios-angular/angular.json
+++ b/inventarios-angular/angular.json
@@ -27,12 +27,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -98,6 +93,6 @@
     }
   },
   "cli": {
-    "analytics": "47be41f8-e793-42a0-a7d6-57100b6c5348"
+    "analytics": false
   }
 }
